# beancount-import-sparkasse

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
beancount_import_sparkasse/: giro.py  importers.py  models.py  processors.py  sparkasse.py  utils.py
tests/: test_giro.py  test_processors.py  test_sparkasse.py  utils.py
